fixed alignment of log in status on navigation bar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,6 +55,10 @@ a:hover {
   position: relative;
 }
 
+.status {
+  padding-top: 10px;
+}
+
 .logo {
   font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.6em;
